--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@
     top: 130px;
     position: relative;
     font-size:15px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 #thegallery{
     position:relative;
